--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,36 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+
+  <!-- HTML Meta Tags -->
+  <title>GitHub - ravi-d-g/angular-17-ngrx</title>
+  <meta name="description"
+    content="Contribute to ravi-d-g/angular-17-ngrx development by creating an account on GitHub.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://github.com/ravi-d-g/angular-17-ngrx">
+  <meta property="og:type" content="website">
+
+
+  <meta property="og:title" content="GitHub - ravi-d-g/angular-17-ngrx">
+  <meta property="og:description"
+    content="Contribute to ravi-d-g/angular-17-ngrx development by creating an account on GitHub.">
+  <meta property="og:image"
+    content="https://opengraph.githubassets.com/e0305f881794b76680e04560ae63c1b3f3c7c687ff55235188b5e9fe615b514b/ravi-d-g/angular-17-ngrx">
+  <meta name="author" content="Ravi Gangawane">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="github.com">
+  <meta property="twitter:url" content="https://github.com/ravi-d-g/angular-17-ngrx">
+  <meta name="twitter:title" content="GitHub - ravi-d-g/angular-17-ngrx">
+  <meta name="twitter:description"
+    content="Contribute to ravi-d-g/angular-17-ngrx development by creating an account on GitHub.">
+  <meta name="twitter:image"
+    content="https://opengraph.githubassets.com/e0305f881794b76680e04560ae63c1b3f3c7c687ff55235188b5e9fe615b514b/ravi-d-g/angular-17-ngrx">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 </head>
 
 <body>
